# fmod-sys

./: Cargo.toml  LICENSE  README.md  build.rs  core-wrapper.h  studio-wrapper.h
.github/workflows/: rust.yml
fmodapi/: README.md
src/: lib.rs
