[package]
name = "fmod-sys"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Bindgen wrappers around the FMOD Core and Studio libraries"
readme = "README.md"
repository = "https://github.com/khonsulabs/fmod-sys"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
studio=[]

[dependencies]

[build-dependencies]
bindgen = "*"