[package]
name = "fmod-sys"
version = "0.1.1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Bindgen wrappers around the FMOD Core and Studio libraries"
readme = "README.md"
repository = "https://github.com/khonsulabs/fmod-sys"
keywords = ["gamedev", "audio", "fmod"]
categories = ["external-ffi-bindings", "multimedia::audio"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
studio=[]

[dependencies]

[build-dependencies]
bindgen = "0.53"